update google auth client